--- a/app/views/admin/custom_fields/form/_search_filter.haml
+++ b/app/views/admin/custom_fields/form/_search_filter.haml
@@ -4,13 +4,13 @@
       - custom_field.with_type do |type|
         - case type
         - when :date_field
-          = form.check_box :search_filter, disabled: true
+          = form.check_box :search_filter, checked: false, disabled: true
           = form.label :search_filter, t("admin.custom_fields.form.search_filter.search_filter"), class: "disabled"
 
           = render :partial => "layouts/info_text", :locals => { :text => t("admin.custom_fields.form.search_filter.date_cant_be_filtered") }
 
         - when :text
-          = form.check_box :search_filter, disabled: true
+          = form.check_box :search_filter, checked: false, disabled: true
           = form.label :search_filter, t("admin.custom_fields.form.search_filter.search_filter"), class: "disabled"
 
           = render :partial => "layouts/info_text", :locals => { :text => t("admin.custom_fields.form.search_filter.text_cant_be_filtered") }
