Use a more semantic h2 instead of div

--- a/app/views/layouts/_onboarding_popup.html.erb
+++ b/app/views/layouts/_onboarding_popup.html.erb
@@ -2,9 +2,9 @@
   $('#<%= id %>').lightbox_me({ centered: true, zIndex: 1000000 });
 <% end %>
 <img src=<%= image %> class="onboarding-popup__image" />
-<div class="onboarding-popup__title">
+<h2 class="onboarding-popup__title">
   <%= title %>
-</div>
+</h2>
 <div class="onboarding-popup__body">
   <%= body.html_safe %>
 </div>
