--- a/app/views/admin/communities/edit_look_and_feel.haml
+++ b/app/views/admin/communities/edit_look_and_feel.haml
@@ -7,6 +7,9 @@
     = "-"
     = t("admin.communities.edit_details.community_look_and_feel")
 
+- if true || flash[:onboarding_popup]
+  = render :layout => "layouts/lightbox", :partial => "layouts/onboarding_popup", locals: {title: "Looking good!", body: "Now let's focus on some functionality. Filters help your users find what they are looking for. Add a custom filter yourself,  specific to your marketplace.", action_label: "Add fields & filters", action_link: "/en/admin", image: "https://placekitten.com/200/200", id: "onboarding-popup" }
+
 = render :partial => "admin/left_hand_navigation", :locals => { :links => admin_links_for(@current_community) }
 
 #new_news_item_form.left-navi-section
