--- a/app/views/admin/communities/edit_look_and_feel.haml
+++ b/app/views/admin/communities/edit_look_and_feel.haml
@@ -7,8 +7,8 @@
     = "-"
     = t("admin.communities.edit_details.community_look_and_feel")
 
-- if true || flash[:onboarding_popup]
-  = render :layout => "layouts/lightbox", :partial => "layouts/onboarding_popup", locals: {title: "Looking good!", body: "Now let's focus on some functionality. Filters help your users find what they are looking for. Add a custom filter yourself,  specific to your marketplace.", action_label: "Add fields & filters", action_link: "/en/admin", image: "https://placekitten.com/200/200", id: "onboarding-popup" }
+- if show_onboarding_popup
+  = render :layout => "layouts/lightbox", :partial => "layouts/onboarding_popup", locals: {title: popup_title, body: popup_body, action_label: popup_button, action_link: getting_started_admin_community_path(@community), image: asset_path(popup_image), id: "onboarding-popup" }
 
 = render :partial => "admin/left_hand_navigation", :locals => { :links => admin_links_for(@current_community) }
 
