--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -588,7 +588,7 @@ label.error {
   width: 100%;
   background: $background;
   padding: lines(1);
-  @include border-radius(em(5));
+  border-radius: 10px;
 
   h2 {
     margin-bottom: lines(0.25);
@@ -630,26 +630,23 @@ label.error {
 }
 
 a.lightbox-x {
-  border: em(2) solid $background;
   width: lines(1.25);
   height: lines(1.25);
-  padding: em(1) em(4);
+  padding: 15px 30px 30px 15px;
   position: absolute;
-  right: lines(-0.5);
-  top: lines(-0.5);
+  right: 0;
+  top: 0;
+  color: #aaacad;
+
   &:hover {
-    background: $body;
+    color: #919294;
   }
 
-  @include border-radius(50%);
-  background: $emphasis;
-  border: em(3) solid $background;
-  color: $background;
   @include media(tablet) {
     width: lines(1.5);
     height: lines(1.5);
+    padding: 25px 45px 45px 25px;
     @include big-type;
-    padding: em(7);
   }
 }
 
