--- a/app/assets/stylesheets/views/admin/_onboarding-popup.scss
+++ b/app/assets/stylesheets/views/admin/_onboarding-popup.scss
@@ -18,10 +18,8 @@
 
 .onboarding-popup__body {
   font-size: 16px;
-  font-weight: normal;
   color: #3c3c3c;
   line-height: 24px;
-  max-width: 550px;
   width: 90%;
   margin: 1em auto;
 }
@@ -35,14 +33,17 @@
   color: white;
   border-radius: 5px;
   margin-top: 1em;
+
+  &:hover {
+    background-color: #4d998b;
+    color: white;
+  }
 }
 
 .onboarding-popup__skip {
   display: block;
   font-size: 13px;
-  font-weight: regular;
   color: #808080;
   line-height: 21px;
-  margin-bottom: 1em;
-  margin-top: 1em;
+  margin: 1em 0;
 }
