Add href attr to link

--- a/app/views/layouts/_onboarding_popup.html.erb
+++ b/app/views/layouts/_onboarding_popup.html.erb
@@ -11,6 +11,6 @@
 <a class="onboarding-popup__action" href="<%= action_link%>">
   <%= action_label %>
 </a>
-<a class="onboarding-popup__skip">
+<a class="onboarding-popup__skip" href="#">
   I'll do it later, thanks
 </a>
