--- a/app/views/invitations/new.haml
+++ b/app/views/invitations/new.haml
@@ -8,6 +8,9 @@
     = "-"
     = t("admin.communities.edit_details.invite_people")
 
+- if show_onboarding_popup
+  = render :layout => "layouts/lightbox", :partial => "layouts/onboarding_popup", locals: {title: t(popup_title_key), body: t(popup_body_key), action_label: t(popup_button_key), action_link: getting_started_admin_community_path(@current_community), image: asset_path(popup_image), id: "onboarding-popup" }
+
 #invitation_form.centered-section
   - support_link = link_to(t("homepage.invitation_form.this_article_link"), "http://support.sharetribe.com/knowledgebase/articles/675040", target: "_blank")
   %p= t("homepage.invitation_form.add_email_addresses_description")
