Button text for the finished state.

--- a/app/views/layouts/_onboarding_popup.html.erb
+++ b/app/views/layouts/_onboarding_popup.html.erb
@@ -12,5 +12,5 @@
   <%= action_label %>
 </a>
 <a class="onboarding-popup__skip" href="#" onClick="window.ST.onboarding_popup.trigger('close');">
-  I'll do it later, thanks
+  <%= t("admin.onboarding.popup.button_later") %>
 </a>
