Add component to styleguide onboarding: images (placeholder)

--- a/app/views/styleguide/pages/_header.erb
+++ b/app/views/styleguide/pages/_header.erb
@@ -1,4 +1,7 @@
 <h2>ToC</h2>
 <ul>
+  <li>
+    <%= link_to "Onboarding Guide Page", styleguide_getting_started_guide_path %>
+  </li>
 </ul>
 <br/>
