--- a/app/views/layouts/styleguide.html.erb
+++ b/app/views/layouts/styleguide.html.erb
@@ -3,6 +3,8 @@
 <head>
   <title>Styleguide with Hot Module Replacement HMR</title>
 
+  <%= env_stylesheet_link_tag( hot: 'styleguide') %>
+
   <%= env_stylesheet_link_tag(static: 'application',
                               hot: 'application_hot',
                               media: 'all') %>
