--- a/app/views/admin/paypal_preferences/index.haml
+++ b/app/views/admin/paypal_preferences/index.haml
@@ -13,7 +13,7 @@
     = t("admin.communities.paypal_account.paypal_admin_account")
 
 - if show_onboarding_popup
-  = render :layout => "layouts/lightbox", :partial => "layouts/onboarding_popup", locals: {title: t(popup_title_key), body: t(popup_body_key), action_label: t(popup_button_key), action_link: getting_started_admin_community_path(@current_community), image: asset_path(popup_image), id: "onboarding-popup" }
+  = render :layout => "layouts/lightbox", :partial => "layouts/onboarding_popup", locals: {title: t(popup_title_key), body: t(popup_body_key), action_label: t(popup_button_key), action_link: popup_action_link, image: asset_path(popup_image), id: "onboarding-popup" }
 
 = render :partial => "admin/left_hand_navigation", :locals => { :links => admin_links_for(@current_community) }
 - content_for :extra_javascript do
