--- a/app/views/listings/show.haml
+++ b/app/views/listings/show.haml
@@ -31,7 +31,7 @@
     .fade
 
 - if show_onboarding_popup
-  = render :layout => "layouts/lightbox", :partial => "layouts/onboarding_popup", locals: {title: t(popup_title_key), body: t(popup_body_key), action_label: t(popup_button_key), action_link: getting_started_admin_community_path(@current_community), image: asset_path(popup_image), id: "onboarding-popup" }
+  = render :layout => "layouts/lightbox", :partial => "layouts/onboarding_popup", locals: {title: t(popup_title_key), body: t(popup_body_key), action_label: t(popup_button_key), action_link: popup_action_link, image: asset_path(popup_image), id: "onboarding-popup" }
 
 .row
   .col-8.listing-details-container
