--- a/app/views/listings/show.haml
+++ b/app/views/listings/show.haml
@@ -30,7 +30,7 @@
     %img.listing-image-thumbnail{src: "${url}"}
     .fade
 
-- if show_onboarding_popup
+- if local_assigns[:show_onboarding_popup]
   = render :layout => "layouts/lightbox", :partial => "layouts/onboarding_popup", locals: {title: t(popup_title_key), body: t(popup_body_key), action_label: t(popup_button_key), action_link: popup_action_link, image: asset_path(popup_image), id: "onboarding-popup" }
 
 .row
