Fix deprecation warning in is_admin_of?(community) method
- Rename `is_admin_of?(community)` to `is_marketplace_admin?`
- Rename `has_admin_rights_in?(community)` to `has_admin_rights?`

--- a/app/views/layouts/_header_menu.haml
+++ b/app/views/layouts/_header_menu.haml
@@ -27,7 +27,7 @@
         = icon_tag("redirect", ["icon-with-text"])
         = menu_link.title(I18n.locale)
 
-  - if @current_user && @current_community && @current_user.has_admin_rights_in?(@current_community)
+  - if @current_user && @current_community && @current_user.has_admin_rights?
     = link_to edit_details_admin_community_path(@current_community) do
       = icon_tag("admin", ["icon-with-text"])
       = t("layouts.logged_in.admin")
