--- a/app/views/person_mailer/welcome_email.html.haml
+++ b/app/views/person_mailer/welcome_email.html.haml
@@ -11,7 +11,7 @@
                     %tr
                       %td{:width => "7.5%"}
                       %td{:valign => "top", :width => "85%", :style => "font-family:Helvetica Neue, Helvetica, Arial, sans-serif; font-weight:400; font-size:14px; padding: 10px 0 40px 0; text-align: left; line-height:22px;"}
-                        - if @recipient.has_admin_rights_in?(@current_community) && !@test_email
+                        - if @recipient.has_admin_rights? && !@test_email
                           = render :partial => "admin/communities/welcome_email_for_marketplace_creator"
                         - else
                           %p= t("emails.common.hey", :name => @recipient.given_name_or_username)
@@ -21,7 +21,7 @@
                           - else
                             = render :partial => "admin/communities/default_welcome_email"
                       %td{:width => "7.5%"}
-            - unless @recipient.has_admin_rights_in?(@current_community) && !@test_email
+            - unless @recipient.has_admin_rights? && !@test_email
               %tr
                 %td{:style => "text-align: left;width:100%;max-width:602px;padding: 0 45px;"}
                   %p{:style => "margin-top:15px;margin-bottom:15px;font-family:helvetica,arial,sans-serif;font-size:12px;color:#464646;"}
