Add onboarding top bar

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -6,6 +6,8 @@
     .noscript-padding
       -# Noscript content will be positioned here
 
+  - if @current_user && @current_community && @current_user.has_admin_rights_in?(@current_community)
+    = react_component("OnboardingTopBar", props: {translations: t('admin.onboarding.topbar'), status: @onboarding_status}, prerender: false)
   = render :partial => 'layouts/global_header'
 
   - if display_expiration_notice?
