Experiment feature flag for the top bar

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -7,7 +7,8 @@
       -# Noscript content will be positioned here
 
   - if @current_user && @current_community && @current_user.has_admin_rights_in?(@current_community)
-    = react_component("OnboardingTopBar", props: {translations: t('admin.onboarding.topbar'), status: @onboarding_status}, prerender: false)
+    - with_feature(:onboarding_redesign_v1) do
+      = react_component("OnboardingTopBar", props: {translations: t('admin.onboarding.topbar'), status: @onboarding_status}, prerender: true)
   = render :partial => 'layouts/global_header'
 
   - if display_expiration_notice?
