--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -9,7 +9,7 @@
   - if @current_user && @current_community && @current_user.has_admin_rights_in?(@current_community)
     - with_feature(:onboarding_redesign_v1) do
       - props = onboarding_topbar_props
-      - unless props[:nextStep] == :all_done
+      - unless props[:next_step] == :all_done
         - cache ['v1', 'onboarding_topbar', props] do
           = react_component("OnboardingTopBar", props: props, prerender: true)
   = render :partial => 'layouts/global_header'
