--- a/app/views/community_memberships/pending_consent.haml
+++ b/app/views/community_memberships/pending_consent.haml
@@ -1,5 +1,5 @@
 - content_for :javascript do
-  initialize_new_community_membership_form("#{t("people.new.email_is_in_use_or_not_allowed")}",#{invite_only}, "#{t("people.new.invalid_invitation_code")}");
+  initialize_pending_consent_form("#{t("people.new.email_is_in_use_or_not_allowed")}",#{invite_only}, "#{t("people.new.invalid_invitation_code")}");
 
 - content_for :title_header do
   %h1= t('community_memberships.new.join_community', community: @current_community.name(I18n.locale))
@@ -26,7 +26,7 @@
     = t('community_memberships.new.if_want_to_view_content')
     = link_to(t('community_memberships.new.log_out'), logout_path) + "."
 
-  = form_tag controller: :community_memberships, action: :consent_given do
+  = form_tag({controller: :community_memberships, action: :consent_given}, {id: "pending_consent_form"}) do
 
     - if invite_only
       - if values[:invitation_code].present?
