--- a/client/app/components/OnboardingTopBar/OnboardingTopBar.scss
+++ b/client/app/components/OnboardingTopBar/OnboardingTopBar.scss
@@ -7,10 +7,7 @@ $gradientEnd: rgb(89,165,179);
   color: white;
   padding-top: 1.2em;
   padding-bottom: 1.2em;
-  // todo: remove when we get postcss running
-  background-image: -moz-linear-gradient( 180deg, $gradientStart 0%, $gradientEnd 100%);
-  background-image: -webkit-linear-gradient( 180deg, $gradientStart 0%, $gradientEnd 100%);
-  background-image: -ms-linear-gradient( 180deg, $gradientStart 0%, $gradientEnd 100%);
+  background-image: linear-gradient( 180deg, $gradientStart 0%, $gradientEnd 100%);
   box-shadow: $topbarShadow;
 }
 
