Move topbar check to helper

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -6,7 +6,7 @@
     .noscript-padding
       -# Noscript content will be positioned here
 
-  - if @current_user && @current_community && @current_user.has_admin_rights? && !@current_user.community_membership.pending_email_confirmation?
+  - if display_onboarding_topbar?
     - with_feature(:onboarding_redesign_v1) do
       - props = onboarding_topbar_props
       - unless props[:next_step] == :all_done
