Disabling payments for an order type counts as configuring payments

--- a/app/views/analytics/_google_tag_manager.haml
+++ b/app/views/analytics/_google_tag_manager.haml
@@ -24,5 +24,9 @@
   window.ST = window.ST || {};
   window.ST.gtmPush = function(data){
     window.dataLayer = window.dataLayer || [];
-    window.dataLayer.push(data);
+    if (Array.isArray(data)) {
+      Array.prototype.push.apply(window.dataLayer, data);
+    } else {
+      window.dataLayer.push(data);
+    }
   };
