--- a/client/app/components/OnboardingTopBar/OnboardingTopBar.scss
+++ b/client/app/components/OnboardingTopBar/OnboardingTopBar.scss
@@ -29,6 +29,10 @@ $gradientEnd: rgb(89,165,179);
   font-size: 16px;
   flex-shrink: 0;
   margin-right: 0.5em;
+  color: white;
+  &:hover {
+    color: white;
+  }
 }
 
 .progressLabelPercentage {
