paypal step needs alternative cta button for disabling payments

--- a/client/app/assets/styles/app-variables.scss
+++ b/client/app/assets/styles/app-variables.scss
@@ -23,9 +23,12 @@ $colorInfoText: gray;
 $colorButtonText: white;
 $colorButton: #59b3a2;
 $colorButtonHover: #4d998b;
+$colorButtonGhost: #26806F;
 
 $paddingButtonVertical: 0.626em;
 $paddingButtonHorizontal: 1.875em;
+
+$gutter: 1rem;
 
 $verticalSpaceText: 0.75em;
 $verticalSpaceTextSmall: 0.625em;
