Pass icon map to the views

--- a/app/views/layouts/_header_anchors.haml
+++ b/app/views/layouts/_header_anchors.haml
@@ -7,4 +7,4 @@
         %span.header-text-link
           %span#header-user-display-name.visible-tablet-inline
             = current_user_name
-          = icon_tag("dropdown", ["icon-dropdown"])
+          = icon_map_tag(icons, "dropdown", ["icon-dropdown"])
