--- a/app/views/layouts/_header_right_visible_tablet.haml
+++ b/app/views/layouts/_header_right_visible_tablet.haml
@@ -1,6 +1,6 @@
 .header-right.visible-tablet
   = link_to inbox_path, title: t("layouts.conversations.messages"), :id => "inbox-link", :class => "header-text-link header-hover header-inbox-link" do
-    = icon_tag("mail", ["header-inbox"])
+    = icon_map_tag(icons, "mail", ["header-inbox"])
     - if unread_count > 0
       .badge{:class => get_badge_class(unread_count)}
         = unread_count
