--- a/app/views/layouts/_header_user_menu.haml
+++ b/app/views/layouts/_header_user_menu.haml
@@ -2,24 +2,24 @@
 #header-user-toggle-menu.toggle-menu.header-toggle-menu-user.hidden
 
   = link_to inbox_path do
-    = icon_tag("mail", ["icon-with-text"])
+    = icon_map_tag(icons, "mail", ["icon-with-text"])
     = t("layouts.conversations.messages")
     - if unread_count > 0
       .mobile-badge{:class => get_badge_class(unread_count)}
         = unread_count
 
   = link_to profile_path do
-    = icon_tag("user", ["icon-with-text"])
+    = icon_map_tag(icons, "user", ["icon-with-text"])
     = t("header.profile")
 
   = link_to manage_listings_path do
-    = icon_tag("list", ["icon-with-text"])
+    = icon_map_tag(icons, "list", ["icon-with-text"])
     = t("header.manage_listings")
 
   = link_to settings_path do
-    = icon_tag("settings", ["icon-with-text"])
+    = icon_map_tag(icons, "settings", ["icon-with-text"])
     = t("layouts.logged_in.settings")
 
   = link_to logout_path do
-    = icon_tag("logout", ["icon-with-text"])
+    = icon_map_tag(icons, "logout", ["icon-with-text"])
     = t("layouts.logged_in.logout")
