--- a/app/views/layouts/_header_menu.haml
+++ b/app/views/layouts/_header_menu.haml
@@ -33,8 +33,8 @@
       = t("layouts.logged_in.admin")
 
   .hidden-desktop
-    - with_available_locales do |locales|
+    - Maybe(available_locales).each do |locales|
       .toggle-menu-title
         = t("layouts.global-header.select_language")
 
-      = render :partial => "layouts/locale_select", :collection => locales, :as => :loc_array
+      = render :partial => "layouts/locale_select", :collection => locales, :as => :loc_array, locals: { return_after_locale_change: return_after_locale_change }
