--- a/app/views/layouts/_header_user_menu.haml
+++ b/app/views/layouts/_header_user_menu.haml
@@ -1,22 +1,22 @@
 
 #header-user-toggle-menu.toggle-menu.header-toggle-menu-user.hidden
 
-  = link_to person_inbox_path(@current_user) do
+  = link_to inbox_path do
     = icon_tag("mail", ["icon-with-text"])
     = t("layouts.conversations.messages")
     - if unread_count > 0
       .mobile-badge{:class => get_badge_class(unread_count)}
         = unread_count
 
-  = link_to person_path(user) do
+  = link_to profile_path do
     = icon_tag("user", ["icon-with-text"])
     = t("header.profile")
 
-  = link_to person_path(user, :show_closed => true) do
+  = link_to manage_listings_path do
     = icon_tag("list", ["icon-with-text"])
     = t("header.manage_listings")
 
-  = link_to person_settings_path(user) do
+  = link_to settings_path do
     = icon_tag("settings", ["icon-with-text"])
     = t("layouts.logged_in.settings")
 
