Guide uses new t function and interpolation
- Change the onboarding guide to use the new `t` function
- Remove all markup from translations
- Use forked version of i18n-js, with interpolationMode

--- a/app/views/admin/getting_started_guide/index.haml
+++ b/app/views/admin/getting_started_guide/index.haml
@@ -10,4 +10,4 @@
       = render :partial => "admin/left_hand_navigation", :locals => { :links => admin_links_for(@current_community) }
     .col-9
       - cache ['v1', 'onboarding_guide', props] do
-        = react_component("OnboardingGuideApp", props: props)
+        = react_component("OnboardingGuideApp", props: props, prerender: false)
