Move all variables to a single file

--- a/client/app/assets/styles/app-variables.scss
+++ b/client/app/assets/styles/app-variables.scss
@@ -35,3 +35,10 @@ $verticalSpaceTextSmall: 0.625em;
 $verticalSpaceTextInfo: 0.375em;
 $verticalSpaceElement: 2em;
 $verticalSpaceElementBig: 2.5em;
+
+$topbarShadow: 0px 5px 8px 0px rgba(0, 0, 0, 0.06);
+$gradientStart: rgb(89,179,162);
+$gradientEnd: rgb(89,165,179);
+
+$widthRestriction: 550px;
+$widthRestrictionPercentage: 90%;
