--- a/app/views/layouts/_marketplace_head.haml
+++ b/app/views/layouts/_marketplace_head.haml
@@ -64,6 +64,8 @@
 - with_stylesheet_url(@current_community) do |stylesheet_url|
   = stylesheet_link_tag stylesheet_url
 
+= stylesheet_link_tag "app-bundle"
+
 / Modernizr, in the head tag, right after stylesheets, for best performance:
 = javascript_include_tag "modernizr.min"
 
