Show all color varibles in the Styleguide

--- a/client/app/components/Styleguide/ColorsAndTypography.css
+++ b/client/app/components/Styleguide/ColorsAndTypography.css
@@ -18,7 +18,7 @@
 .colorCode {
   margin: 0 auto;
   padding: 1.2em 0;
-  width: 5em;
   color: white;
   text-shadow: 0 0 2px black;
+  text-align: center;
 }
