--- a/client/app/assets/styles/mixins.css
+++ b/client/app/assets/styles/mixins.css
@@ -1,5 +1,5 @@
 @define-mixin guideStepListCheckbox {
-  background-image: url(../../assets/images/iconSquare@2x.png);
+  background-image: url('../../assets/images/iconSquare@2x.png');
   background-repeat: no-repeat;
   background-size: 100%;
   background-position-y: 1px;
