--- a/client/app/components/OnboardingTopBar/OnboardingTopBar.css
+++ b/client/app/components/OnboardingTopBar/OnboardingTopBar.css
@@ -4,7 +4,7 @@
   padding-top: 1.2em;
   padding-bottom: 1.2em;
   background-image: linear-gradient(90deg, var(--gradientStart) 0%, var(--gradientEnd) 100%);
-  box-shadow: var(--topbarShadow);
+  box-shadow: var(--onboardingTopbarShadow);
 }
 
 .topbar {
@@ -38,7 +38,7 @@
 
 .progressBar {
   background-color: rgb(184, 234, 225);
-  box-shadow: var(--topbarShadow);
+  box-shadow: var(--onboardingTopbarShadow);
   height: 100%;
   border-radius: 0.5em;
   transition: width 2s;
