--- a/client/app/components/OnboardingGuide/OnboardingGuide.css
+++ b/client/app/components/OnboardingGuide/OnboardingGuide.css
@@ -33,7 +33,7 @@
 }
 
 .stepListCheckbox {
-  background-image: url('./images/iconSquare@2x.png');
+  background-image: url('../../assets/images/iconSquare@2x.png');
   background-repeat: no-repeat;
   background-size: 100%;
   background-position-y: 1px;
@@ -45,7 +45,7 @@
 
 .stepListItemDone .stepListCheckbox {
   @mixin guideStepListCheckbox;
-  background-image: url('./images/iconSquareChecked@2x.png');
+  background-image: url('../../assets/images/iconSquareChecked@2x.png');
 }
 
 .stepListLink {
@@ -112,16 +112,16 @@
   margin-top: var(--verticalSpaceTextInfo);
   max-width: var(--widthRestriction);
   width: var(--widthRestrictionPercentage);
-}
 
-.infoTextIcon {
-  position: absolute;
-  width: 0.75em;
-  margin-top: 1px;
-}
+  .infoTextIcon {
+    position: absolute;
+    width: 0.75em;
+    margin-top: 1px;
+  }
 
-.infoTextContent {
-  padding-left: 1.5em;
+  .infoTextContent {
+    padding-left: 1.5em;
+  }
 }
 
 .sloganImageContainer {
