--- a/app/views/layouts/_header_menu.haml
+++ b/app/views/layouts/_header_menu.haml
@@ -28,7 +28,7 @@
         = menu_link.title(I18n.locale)
 
   - if @current_user && @current_community && @current_user.has_admin_rights?
-    = link_to edit_details_admin_community_path(@current_community) do
+    = link_to admin_details_edit_path do
       = icon_map_tag(icons, "admin", ["icon-with-text"])
       = t("layouts.logged_in.admin")
 
