--- a/app/views/admin/communities/edit_welcome_email.haml
+++ b/app/views/admin/communities/edit_welcome_email.haml
@@ -22,7 +22,7 @@
             %span.alert-box-icon<>
               = icon_tag("alert", ["icon-fix"])
             %span<
-              = t("admin.communities.outgoing_email.white_label_offer", upgrade_pro_plan_link: link_to(t("admin.communities.outgoing_email.upgrade_pro_plan_link"), admin_plan_path)).html_safe
+              = t("admin.communities.outgoing_email.white_label_offer", upgrade_pro_plan_link: link_to(t("admin.communities.outgoing_email.upgrade_plan_link"), admin_plan_path)).html_safe
 
   .row
     .col-12
