Add correct translation to edit welcome email

--- a/app/views/admin/communities/edit_welcome_email.haml
+++ b/app/views/admin/communities/edit_welcome_email.haml
@@ -161,5 +161,6 @@
       - sharetribe_link = link_to("Sharetribe", link_to_sharetribe)
       - learn_more = link_to(t("layouts.branding.learn_more"), link_to_sharetribe)
       .info-text-container
-        =t("layouts.branding.whitelabel_info", sharetribe_link: sharetribe_link, learn_more: learn_more).html_safe
+        =t("layouts.branding.powered_by", sharetribe_link: sharetribe_link).html_safe
+        =t("layouts.branding.create_own", learn_more: learn_more).html_safe
 
