Make guide to use component cache

--- a/app/views/admin/getting_started_guide/index.haml
+++ b/app/views/admin/getting_started_guide/index.haml
@@ -9,5 +9,5 @@
     .col-3
       = render :partial => "admin/left_hand_navigation", :locals => { :links => admin_links_for(@current_community) }
     .col-9
-      - cache ['v1', 'onboarding_guide', props] do
+      - react_component_cache(name: "onboarding_guide", props: props) do
         = react_component("OnboardingGuideApp", props: props)
