--- a/app/views/layouts/email.html.haml
+++ b/app/views/layouts/email.html.haml
@@ -28,7 +28,7 @@
                   = yield
 
                 - if @show_branding_info
-                  = render :partial => "non_whitelabel_branding", locals: {link_to_sharetribe: "https://www.sharetribe.com/?utm_source=#{@current_community.ident}.sharetribe.com&utm_medium=email&utm_campaign=nowl-emails-auto"}
+                  = render :partial => "layouts/email_non_whitelabel_branding", locals: {link_to_sharetribe: "https://www.sharetribe.com/?utm_source=#{@current_community.ident}.sharetribe.com&utm_medium=email&utm_campaign=nowl-emails-auto"}
                 - skip_unsubscribe_footer ||= false
                 - if @recipient && @url_params && !skip_unsubscribe_footer
                   %tr
