--- a/app/views/listings/help_texts/_help_valid_until.de.haml
+++ b/app/views/listings/help_texts/_help_valid_until.de.haml
@@ -1,2 +1,2 @@
 %p 
-  Du kannst selbst bestimmen, wie lange Dein Eintrag aktiv bleibt. Nach dem Ablaufdatum deaktiviert sich der Eintrag automatisch. Deaktivierte Einträge sind in normalen Eintragslisten nicht sichtbar. Du kannst das Ablaufdatum jederzeit ändern, indem Du auf "Eintrag ändern" klickst. Man kann den Eintrag auch im selben Menü reaktivieren, falls dieser sich deaktiviert hat.
+  Du kannst selbst bestimmen, wie lange dein Eintrag aktiv bleibt. Nach dem Ablaufdatum deaktiviert sich der Eintrag automatisch. Deaktivierte Einträge sind in normalen Eintragslisten nicht sichtbar. Du kannst das Ablaufdatum jederzeit ändern, indem du auf "Eintrag ändern" klickst. Man kann den Eintrag auch im selben Menü reaktivieren, falls dieser sich deaktiviert hat.
