--- a/app/views/landing_page/_hero.erb
+++ b/app/views/landing_page/_hero.erb
@@ -9,16 +9,18 @@
 
         <div class="hero__search-bar-padding">
           <form method="get" id="<%= section_id %>__search-form" class="hero__search-bar" action="<%= s["search_path"]["path"] %>">
-            <div class="hero__search-icon">
+            <div class="hero__search-input-container">
+              <div class="hero__search-icon">
 
-              <svg class="hero__search-icon-svg" viewBox="27 19 22 22" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                <g id="icon_search" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" transform="translate(38.000000, 30.000000) scale(-1, 1) translate(-38.000000, -30.000000) translate(28.000000, 20.000000)" stroke-linecap="round" stroke-linejoin="round">
-                  <path d="M14.6666667,14.6666667 L19.3254458,19.3254458" id="line" stroke="#525961" stroke-width="2"></path>
-                  <circle id="Oval" stroke="#525961" stroke-width="2" cx="8" cy="8" r="8"></circle>
-                </g>
-              </svg>
+                <svg class="hero__search-icon-svg" viewBox="27 19 22 22" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                  <g id="icon_search" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" transform="translate(38.000000, 30.000000) scale(-1, 1) translate(-38.000000, -30.000000) translate(28.000000, 20.000000)" stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M14.6666667,14.6666667 L19.3254458,19.3254458" id="line" stroke="#525961" stroke-width="2"></path>
+                    <circle id="Oval" stroke="#525961" stroke-width="2" cx="8" cy="8" r="8"></circle>
+                  </g>
+                </svg>
+              </div>
+              <input type="search" name="q" class="hero__search-input" placeholder="<%= s["search_placeholder"]["value"] %>"/>
             </div>
-            <input type="search" name="q" class="hero__search-input" placeholder="<%= s["search_placeholder"]["value"] %>"/>
             <button type="submit" class="hero__search-button"><%= s["search_button"]["value"] %></button>
             <% if s["variation"]["value"] == "location_search" %>
               <input type="hidden" name="ls" />
